Added the Maven Tomcat Plugin so it can be run without IDE configuration or Tomcat configuration.