@@ -24,18 +24,24 @@
             <version>${spring.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>2.1</version>
-            <scope>provided</scope>
-        </dependency>
+		<!-- Servlet -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -76,6 +82,38 @@
                     </includes>
                 </configuration>
             </plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.0</version>
+				<configuration>
+					<port>8080</port>
+					<systemProperties>
+						<JAVA_OPTS>-Xmx1024m -XX:MaxPermSize=512m</JAVA_OPTS>
+						<!-- Comment out the next line to enable S3 connections.
+						Be careful that you are *not* connecting to production
+						because database synchronization with S3 structure is critical!
+						The way this would look as a JVM parameter on the tomcat server's
+						catalina.sh is -Dspring.profiles.default=prod or -Dspring.profiles.active=dev -->
+						<spring.profiles.active>dev</spring.profiles.active>
+						<spring.profiles.default>prod</spring.profiles.default>
+					</systemProperties>
+					<additionalClasspathDirs>
+						<additionalClasspathDir>${dojo-example.properties.directory}</additionalClasspathDir>
+					</additionalClasspathDirs>
+					<!--
+					<httpsPort>8443</httpsPort>
+					<keystoreFile>${basedir}/src/test/resources/keystore.jks</keystoreFile>
+					<keystorePass>changeit</keystorePass>
+					-->
+					<!-- For Solr running on embedded Tomcat, This does not get picked up for some reason
+					so a separate Jetty instance is configured to be run instead.  Also, the Maven profile "search"
+					can be invoked during the tomcat7:run to fire up the instance automatically. -->
+					<!--
+					<addContextWarDependencies>true</addContextWarDependencies>
+					-->
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 </project>
